--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: rgb(100,100,100);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .mainContainer {
@@ -22,8 +23,8 @@ body {
     justify-content: flex-end;
     align-items: flex-end;
     box-sizing: border-box;
-    font-size: 40px;
-    padding: 0.5em 1em 0.5em 1em;
+    font-size: 55px;
+    padding: 0.5em 0.8em 0.3em 1em;
     height:9rem;
     margin: 10px;
     border-radius: 50px;
@@ -71,6 +72,10 @@ body {
 
 .digit:hover{
     background-color: rgb(210,210,210);
+}
+
+.column:active {
+    box-shadow: inset 1px 1px 3px black;
 }
 
 .operator:hover{
