--- a/style.css
+++ b/style.css
@@ -18,18 +18,31 @@ body {
 .content {
     margin: 0.5rem;
 }
+
+.displayContainer {
+    margin: 10px;
+    border-radius: 50px;
+    background-color: rgb(60,60,60);
+    
+}
+.equationTracker {
+    height: 2rem;
+    display:flex;
+    justify-content: flex-end;
+    align-items:flex-end;
+    color: rgb(200,200,200);
+    font-weight:100;
+    padding-right: 2.4rem;
+}
 .display {
+    padding: 0em 0.6em 0.15em 0.5em;
     display:flex;
     justify-content: flex-end;
     align-items: flex-end;
     box-sizing: border-box;
     font-size: 55px;
-    padding: 0.5em 0.8em 0.3em 1em;
-    height:9rem;
-    margin: 10px;
-    border-radius: 50px;
-    color: white;
-    background-color: rgb(60,60,60);
+    height:4.6rem;
+    color: white;  
 }
 .row{
     box-sizing: border-box;
