--- a/style2.css
+++ b/style2.css
@@ -79,18 +79,24 @@ body {
                         
                     
                     }
-                .column{
+                .column {
                     display: flex;
                     flex: 1 1 auto;
                     justify-content: center;
-                    align-items: center;;
+                    align-items: center;
                     font-size: 3em;
                     box-sizing: border-box;
-                    height:1.25em;
+                    height: 1.25em;
                     border-radius: 500px;
                     width: 25%;
                     margin: 5px;
                     box-shadow: 1px 2px 7px rgba(128, 128, 128, 0.15);
+                    -webkit-touch-callout: none;
+                    -webkit-user-select: none;
+                    -khtml-user-select: none;
+                    -moz-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
                 }
                     .column:hover {
                         border: 1px solid rgb(55, 255, 0);
@@ -102,25 +108,14 @@ body {
                 .digit {
                     background-color: rgb(237, 237, 237);
                 }
-                    .digit:hover{
-                        background-color: rgb(237, 237, 237);
-                        border: 1px solid rgb(55, 255, 0)
-                    }
 
-                .operator {
-                    /* color: white; */
-                    background-color: rgb(237, 237, 237);
+                .operator,
+                .equals,
+                .plusMinus {
+                    padding-bottom: 10px;
                 }
-                    .operator:hover{
-                        background-color: rgb(237, 237, 237);
-                    }
-                .equals {
-                    /* color: white; */
-                    background-color: rgb(237, 237, 237);
-                }
-                    .equals:hover {
-                        background-color: rgb(237, 237, 237);
-                    }
+
+ 
                     
 
 
