--- a/style2.css
+++ b/style2.css
@@ -114,7 +114,13 @@ body {
                 .plusMinus {
                     padding-bottom: 10px;
                 }
+.activeByKey {
+    box-shadow: inset 1px 1px 3px black
+}
 
+.highlight {
+    border: 1px solid rgb(55, 255, 0);
+}
  
                     
 
